--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-<title>Index. eclectic 0.1</title>
+<title>Index. eclectic 0.1.4</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Erik Clarke">
 
@@ -32,7 +32,7 @@
     <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">eclectic 0.1</a>
+      <a class="brand" href="#">eclectic 0.1.4</a>
       <div class="nav">
         <ul class="nav">
           <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
@@ -51,13 +51,9 @@
   <div class="span8">
     <h1>eclectic</h1>
 
-<p>Miscellaneous R functions.</p>
+<p>Miscellaneous R functions, with a focus on microbiome data analysis. Inspired by <a href="https://github.com/kylebittinger/kylemisc">kylebittinger/kylemisc</a>.</p>
 
-<p>So far:</p>
-
-<ul>
-<li>reading blast format 6 output files</li>
-</ul>
+<p>See <a href="http://eclarke.github.io/eclectic">the docs</a> for more info.</p>
 
 
     <h2>Help topics</h2>
