--- a/subcolor_pal.html
+++ b/subcolor_pal.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-<title>subcolor_pal. eclectic 0.1</title>
+<title>subcolor_pal. eclectic 0.1.4</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="">
 
@@ -32,7 +32,7 @@
     <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#">eclectic 0.1</a>
+      <a class="brand" href="#">eclectic 0.1.4</a>
       <div class="nav">
         <ul class="nav">
           <li><a href="index.html"><i class="icon-home icon-white"></i> Index</a></li>
@@ -59,7 +59,7 @@
       <dt>x</dt>
       <dd>the vector or factor grouped by f (i.e. Genus)</dd>
       <dt>f</dt>
-      <dd>the vector or factor that defines the groups of x (i.e. Order)</dd>
+      <dd>the vector or factor that groups the values of x (i.e. Order)</dd>
       <dt>h</dt>
       <dd>the range of hues to use</dd>
       <dt>c</dt>
@@ -78,8 +78,8 @@
       <h2>Value</h2>
 
       <p><dl>
-a list containing $`major`: the base color for each level in f; and
-   $`minor`: the color for each item in x
+a list containing `major`: the base color for each level in f; and
+   `minor`: the color for each item in x
 </dl></p>
   
     </div>
