--- a/agglomerate.html
+++ b/agglomerate.html
@@ -59,9 +59,9 @@
       <dt>s</dt>
       <dd>appropriately-subsetted sample metadata df</dd>
       <dt>cts</dt>
-      <dd>counts matrix (colnames should be present in column 'SampleID' in 's')</dd>
+      <dd>counts matrix (colnames should be present in column `SampleID' in `s')</dd>
       <dt>taxa</dt>
-      <dd>taxonomic data (must have column named 'otu')</dd>
+      <dd>taxonomic data (must have column named `otu')</dd>
     </dl>
     
     <div class="Value">
