--- a/reorder_taxa.html
+++ b/reorder_taxa.html
@@ -52,7 +52,7 @@
 <div class="row">
   <div class="span8">
     <h2>Usage</h2>
-    <pre><div>reorder_taxa(taxonomy)</div></pre>
+    <pre><div>reorder_taxa(taxonomy, ranks&nbsp;=&nbsp;qiimer::taxonomic_ranks)</div></pre>
     
     <h2>Arguments</h2>
     <dl>
