--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
 <p>See <a href="http://eclarke.github.io/eclectic">the docs</a> for more info.</p>
 
+<p>makefile test</p>
+
 
     <h2>Help topics</h2>
 
