--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p>See <a href="http://eclarke.github.io/eclectic">the docs</a> for more info.</p>
 
-<p>makefile test</p>
+<p>makefile test 2</p>
 
 
     <h2>Help topics</h2>
